# AutoVulnDiscovery

./: .gitignore  Author.txt  README.md  hello.py  parsed_test_program
Assignment1/: README.md
Assignment1/BufferOverflow/: README.md  exploit.py  server_comments.txt  shellcode.S  simple  simple.S  simple.c  simple_client.py  udp_server  udp_server.S  udp_server.c  vulnerable  vulnerable.c
Assignment2/: .gitignore  Crash1_input.txt  Crash2_input.txt  README.md  client.py  client4.py  crash2.py  crash3_input.txt  fuzz1.py  fuzzer.png:Zone.Identifier  fuzzer.py  fuzzer2.py  fuzzer_testing.py  voidsmtpd
Assignment2/inputs/: client4.txt  (+10 more)
Assignment3/: Assignment3_Report.pdf:Zone.Identifier  README.MD  Symbolic_Ex.py  Tree_Traverse.py  requirements.txt  symEx.py  test_program.c
Assignment4/: README.MD  W3A_DataFlow.py  analysis_log.txt  analysis_log_reachability_prog_1.txt  analysis_log_reachability_prog_2.txt  analysis_log_reachability_prog_3.txt  analysis_log_reachability_prog_4.txt  analysis_log_signed_prog_1.txt  analysis_log_signed_prog_3.txt  analysis_log_signed_prog_4.txt  basic_test.w3a  cfg.py  definitions.py  flow_function.py  instruction.py  lattice.py  parser.py  prog_1.w3a  prog_2.w3a  prog_3.w3a  prog_4.w3a  reachability_flow_function.py  sign_analysis_flow_function.py  worklist.py
SemesterProject/: EBPF_Simple.py  Makefile  README.MD  hello  main  uprobe.py
SemesterProject/AFLplusplus-dev/custom_mutators/rust/example_lain_post_process/: Cargo.toml
SemesterProject/AFLplusplus-dev/custom_mutators/rust/example_lain_post_process/src/: lain_mutator.rs
(+81 files in other folders)
