[package]
name = "example_lain_post_process"
version = "0.1.0"
authors = [
    "Julius Hohnerlein <julihoh@users.noreply.github.com>",
    "jma <94166787+jma-qb@users.noreply.github.com>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_mutator = { path = "../custom_mutator" }
lain = { git = "https://github.com/AFLplusplus/lain.git" }
bincode = "1.3.3"
serde = { version = "1.0.214", features = ["derive"] }

[[example]]
name = "example_lain_post_process"
path = "./src/lain_mutator.rs"
crate-type = ["cdylib"]
